{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 51,
  "lineage": "cce879b0-b2cb-6af6-5905-1e1abf2c5672",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "RemoteServer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035966e8adab4aaad",
            "arn": "arn:aws:ec2:eu-west-1:893379205229:instance/i-0cc4c7024d2dc899b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc4c7024d2dc899b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "rufol",
            "monitoring": false,
            "primary_network_interface_id": "eni-02db557fd64dc6408",
            "private_dns": "ip-172-16-1-50.eu-west-1.compute.internal",
            "private_ip": "172.16.1.50",
            "public_dns": "ec2-34-241-15-171.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.241.15.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04712ef91835ecde7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-029140b3f42d4a245",
            "tags": {
              "Name": "RemoteServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a2f46a6bb0e2d5b5"
            ]
          },
          "dependencies": [
            "aws_key_pair.rufol",
            "aws_security_group.SSH",
            "aws_subnet.sub_priv",
            "aws_subnet.sub_pub",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ToolsCICD",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-035966e8adab4aaad",
            "arn": "arn:aws:ec2:eu-west-1:893379205229:instance/i-0a309f42d95c0fd25",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a309f42d95c0fd25",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "rufol",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f741279a36c19f4b",
            "private_dns": "ip-172-16-1-170.eu-west-1.compute.internal",
            "private_ip": "172.16.1.170",
            "public_dns": "ec2-52-209-38-69.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.209.38.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0772f930c1141c341",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-029140b3f42d4a245",
            "tags": {
              "Name": "ToolsCICD"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a2f46a6bb0e2d5b5"
            ]
          },
          "dependencies": [
            "aws_key_pair.rufol",
            "aws_security_group.SSH",
            "aws_subnet.sub_pub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bfffa87ce6a76ed3",
            "owner_id": "893379205229",
            "tags": {
              "Name": "TP_CICD_IGW"
            },
            "vpc_id": "vpc-0071bf95c98098e3c"
          },
          "dependencies": [
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Custom_Route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f9ad1cb2f494a738",
            "owner_id": "893379205229",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bfffa87ce6a76ed3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Custom_Route_table"
            },
            "vpc_id": "vpc-0071bf95c98098e3c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e467aa403401122",
            "route_table_id": "rtb-0f9ad1cb2f494a738",
            "subnet_id": "subnet-029140b3f42d4a245"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.Custom_Route_table",
            "aws_subnet.sub_pub",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Priv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:893379205229:security-group/sg-0e767ac30b55a2357",
            "description": "Allow All inbound/outbound traffic from Public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e767ac30b55a2357",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Priv",
            "name_prefix": null,
            "owner_id": "893379205229",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all from public subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0071bf95c98098e3c"
          },
          "dependencies": [
            "aws_subnet.sub_pub",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:893379205229:security-group/sg-0a2f46a6bb0e2d5b5",
            "description": "Allow Only SSH inbound traffic from EFREI \u0026 our Homes network",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2f46a6bb0e2d5b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.102.224.0/24",
                  "46.193.4.20/32",
                  "82.64.104.10/32",
                  "172.16.2.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH",
            "name_prefix": null,
            "owner_id": "893379205229",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-0071bf95c98098e3c"
          },
          "dependencies": [
            "aws_subnet.sub_priv",
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_priv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:893379205229:subnet/subnet-05bf364744d561b85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.2.0/24",
            "id": "subnet-05bf364744d561b85",
            "map_public_ip_on_launch": false,
            "owner_id": "893379205229",
            "tags": {
              "Name": "TP_CICD_Private"
            },
            "vpc_id": "vpc-0071bf95c98098e3c"
          },
          "dependencies": [
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_pub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:893379205229:subnet/subnet-029140b3f42d4a245",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-029140b3f42d4a245",
            "map_public_ip_on_launch": false,
            "owner_id": "893379205229",
            "tags": {
              "Name": "TP_CICD_Public"
            },
            "vpc_id": "vpc-0071bf95c98098e3c"
          },
          "dependencies": [
            "aws_vpc.vpc_tp"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_tp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:893379205229:vpc/vpc-0071bf95c98098e3c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-03c181997892a72cd",
            "default_route_table_id": "rtb-098ac5ac9df8ee0d6",
            "default_security_group_id": "sg-03b8a7eb88d9496ed",
            "dhcp_options_id": "dopt-7b98cc1d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0071bf95c98098e3c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-098ac5ac9df8ee0d6",
            "owner_id": "893379205229",
            "tags": {
              "Name": "TP_CICD"
            }
          }
        }
      ]
    }
  ]
}